buildscript {
	ext {
		springBootVersion = '2.0.0.RELEASE'
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}

}
apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'
test {
    maxHeapSize = "512m"
    jvmArgs "-XX:MaxPermSize=256m"
}

bootJar {
	launchScript()
}

group = 'com.maxxsoft'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.liquibase:liquibase-core:3.6.3'
	implementation 'org.springframework.session:spring-session-core'
	implementation group: 'com.ebay.auth', name: 'ebay-oauth-java-client', version: '1.1.0'
	implementation group: 'org.springframework.integration', name: 'spring-integration-sftp', version: '5.1.7.RELEASE'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'mysql:mysql-connector-java'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	testCompile('org.springframework.boot:spring-boot-starter-test')
	testCompile('org.springframework.security:spring-security-test')
	testCompile('org.apache.httpcomponents:httpclient:4.5.7')
	testImplementation('org.junit.jupiter:junit-jupiter-api:5.3.2')
    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.3.2')
	compile('mysql:mysql-connector-java')
	compile('io.jsonwebtoken:jjwt:0.9.1')
	compile('io.springfox:springfox-swagger2:2.9.2')
	compile('io.springfox:springfox-swagger-ui:2.9.2')
	compile('com.jimmoores:quandl-core:2.0.0')
	compile('com.jimmoores:quandl:2.0.0')
	compile('org.glassfish.jersey.core:jersey-common:2.29')
	compile('org.glassfish.jersey.inject:jersey-hk2:2.29')
	compile('net.sourceforge.javacsv:javacsv:2.0')
	compile('org.springframework.retry:spring-retry')
	compile('org.springframework.session:spring-session-core')
	compile('org.apache.commons:commons-lang3:3.8.1')
	compile("org.springframework.plugin:spring-plugin-core:1.2.0.RELEASE") { force = true }
	compile('org.springframework.statemachine:spring-statemachine-core:2.2.0.RELEASE')
	runtime('org.springframework.boot:spring-boot-devtools')
	compile('org.springframework.integration:spring-integration-ftp')
	compile('org.springframework.boot:spring-boot-starter-freemarker:2.2.3.RELEASE')
	implementation files('libs/ebaycalls.jar')
	implementation files('libs/ebaysdkcore.jar')
	implementation files('libs/MaWSJavaClientLibrary-1.1.jar')
	implementation files('libs/MWSProducts_2011-10-01_v2016-06-01.jar')
	implementation files('libs/MWSClientJavaRuntime-1.0.jar')
	compile('com.jcraft:jsch:0.1.54')
	compile('org.jsoup:jsoup:1.13.1')
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
  	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
	useJUnitPlatform()
	testLogging.showStandardStreams = true
}
